--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <div class="day-of-week"></div>
+  <div class="day-of-week"></div>
+  <div class="day-of-week"></div>
+  <div class="day-of-week"></div>
+  <div class="day-of-week"></div>
   
+  <div class="day-of-week"></div>
+  <div class="day-of-week"></div>
 </body>
 </html>
